some aesthetic spacing issues

--- a/styles/EventCard.module.css
+++ b/styles/EventCard.module.css
@@ -125,7 +125,7 @@
   }
   .eventTitle {
     font-size: 2rem;
-    margin-top: -1rem;
+    margin-top: -2rem;
   }
 
   .eventDescription {
